css/style.css
/*
-----------------------------------
-----------------------------------

GLOBAL RULES

-----------------------------------
-----------------------------------

*/

@font-face {
    font-family: CourierPrime;
    src: url(../fonts/CourierPrime.ttf);
    font-weight: normal;
}

@font-face {
  font-family: CourierPrime;
  src: url(../fonts/CourierPrimeBold.ttf);
  font-weight: bold;
}

html, body{
  font-size: 1em;
  line-height: 1em;
}








/*
-----------------------------------
-----------------------------------

PRINT MEDIA RULES

-----------------------------------
-----------------------------------

*/

@media print {

  .container-fluid{
    margin: 0 auto;
  }

  .header{
    display: none;
  }

  .break{
    display: none;
  }


  page{
    width: 21cm;
    height: 29.7cm;
    background: white;
    display: block;
    margin: 0 auto;
    page-break-after: always;
  }


  .script {
    font-family: CourierPrime, monospace !important;
    color: #212121 !important;
    overflow-y:auto;
    background-color: #f7f7f7;
    box-shadow: 0 0 0.2cm rgba(0,0,0,0.5);
    padding: 80px 40px;
  }


  .scene-heading {
    text-align: left;
    text-transform: uppercase;
  }

  .edit:focus {
    outline: 0
  }

  .title{
    text-align: center;
    padding-top: 40px;
    padding-bottom: 40px;
  }

  .intro{
    padding-top: 25px;
    padding-bottom: 25px;
    margin-left: 12%;
    margin-right: 12%;
  }

  .main{
    padding-top: 20px;
    padding-bottom: 20px;
    margin-left: 8%;
    margin-right: 8%;
  }

  .character, .transition, .super{
    text-transform: uppercase;
  }

  .super{
    font-weight: bold;
  }

  .super-content{
    text-align: center;
    font-weight: bold;
  }

  .transition{
    padding-top: 5px;
    text-align: right;
    padding-bottom: 5px;
  }

  .speak{
    text-align: center;
  }

  .break{
    width: 100%;
    height: 20px;
  }

  .title-page{
    text-align: center;
    vertical-align: middle;
    padding-top: 50%;
  }

  .speaker{
    text-align: center;
  }

  .dialogue{
    text-align: left;
    width: 78%;
margin-left: auto;
margin-right: auto;
  }


}








/*
-----------------------------------
-----------------------------------

SCREEN MEDIA RULES

-----------------------------------
-----------------------------------

*/

@media screen{

html, body{
  overflow-x: hidden;
  /*font-family: 'Inconsolata', monospace !important;*/
  /*maybe try Actor*/
  background-color: #000000;
  color: #212121;
  max-height: 100vh;
  -webkit-transition: all 0.8s ease-out;
  -moz-transition: all 0.8s ease-out ;
  -ms-transition: all 0.8s ease-out ;
  -o-transition: all 0.8s ease-out ;
  transition: all 0.8s ease-out ;
}

h1 {
  font-family: 'Josefin Sans', sans-serif;
  font-weight: 300;
}

.container-fluid{
  max-width: 960px;
  width: 90%;
  margin: auto;
}

hr {
  /*border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));*/
}

.divider{
  text-align: center;
  padding-top: 15px;
}


.navbar{
  padding-top: 5px;
  text-align: center;
  padding-left: 30px;
  padding-right: 30px;
  border: none;
}

.navbar-default{
  background-color: rgba(122,122,122,0.5);
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

.switch, .print{
  opacity: 0.7;
}


page{
  width: 21cm;
  height: 29.7cm;
  display: block;
  margin: 0 auto;
  page-break-after: always;
}

.container{
  width: 100%;
}

::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #555555;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}
::-webkit-scrollbar-thumb:window-inactive {
  background: #555555;
}









/*
-----------------------------------

SCRIPT RELATED RULES

-----------------------------------

*/


.script {
  font-family: CourierPrime, monospace !important;
  color: #212121 !important;
  border: 1px solid #dbdbdb;
  border-right: 1px solid #dbdbdb;
  overflow-y:auto;
  box-shadow: 0 0 0.2cm rgba(0,0,0,0.5);
  padding: 80px 30px;
}


.scene-heading {
  text-align: left;
  text-transform: uppercase;
}

.edit:focus {
  outline: 0
}

.intro{
  padding-top: 25px;
  padding-bottom: 25px;
  margin-left: 15px;
  margin-right: 15px;
}

.main{
  padding-top: 20px;
  padding-bottom: 20px;
}

.character, .transition, .super{
  text-transform: uppercase;
}

.super{
  font-weight: bold;
}

.super-content{
  text-align: center;
  font-weight: bold;
}

.transition{
  padding-top: 5px;
  text-align: right;
  padding-bottom: 5px;
}

.speak{
  text-align: center;
}

.break{
  width: 100%;
  height: 20px;
}

.title-page{
  text-align: center;
  vertical-align: middle;
  padding-top: 50%;
}

.speaker{
  text-align: center;
}

.dialogue{
  text-align: left;
  width: 65%;
margin-left: auto;
margin-right: auto;
}


}
/*} end of @media*/

